# KakaoCampaignSender

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  DELETE_CANDIDATES.md  KakaoSender.spec  README.md  REGRESSION_CHECKLIST.md  build_exe.ps1  kakao_fix.patch  kakao_not_found_recipients.csv  pyproject.toml  release.ps1  tree.txt
.githooks/: prepare-commit-msg
.github/: release.yml
.github/workflows/: auto-pr-body.yml  build-check.yml  pr-auto-label-by-commit-meta.yml  pr-auto-label-by-commit-type.yml  pr-smart-summary.yml  release.yml  windows-release-build.yml
installer/: KakaoCampaignSender.iss
scripts/: commit_message_helper.py  git_editor_wrapper.py  install_git_hooks.ps1  set_github_merge_defaults.ps1
src/app/: kakao_launch.py  main.py  paths.py  startup_args.py  updater.py  version.py
src/app/data/: campaigns_repo.py  contacts_repo.py  db_bootstrap.py  groups_repo.py  schema.py  send_lists_repo.py  send_logs_repo.py
src/app/exporters/: contacts_excel_export.py
src/app/importers/: contacts_excel.py
src/app/platform/: win_clipboard.py  win_file_picker.py  win_file_picker_sta.py
src/app/sender/: image_attach_cache.py  image_attach_ctrl_t.py  image_dib_cache.py  kakao_dialog_send.py  kakao_pc_driver.py  kakao_pc_hooks.py  speed_profiles.py  trace_logger.py  win32_core.py
src/app/stores/: contacts_store.py
src/app/system/: send_report.py
src/app/ui/: splash.py
src/app/update/: update_config.py  update_dialog.py  update_service.py  updater.py
src/backend/database/: db_bootstrap.py  (+1 more)
src/ui/: app_events.py  main_window.py
(+111 files in other folders)
